a.txt
   Compiling img v0.1.0 (/home/guy/programs/rust/gimg)
error[E0583]: file not found for module `show_demuxer`
 --> src/muxers/mod.rs:3:1
  |
3 | pub mod show_demuxer;
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `show_demuxer`, create file "src/muxers/show_demuxer.rs" or "src/muxers/show_demuxer/mod.rs"
  = note: if there is a `mod show_demuxer` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `RGB`
 --> src/image.rs:1:28
  |
1 | use crate::colors::{YCbCr, RGB};
  |                            ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `time::Instant`
 --> src/image.rs:2:15
  |
2 | use std::{fs, time::Instant};
  |               ^^^^^^^^^^^^^

warning: unused imports: `Demuxer` and `self`
  --> src/main.rs:18:21
   |
18 |     image_demuxer::{self, ImageDemuxer},
   |                     ^^^^
19 |     Demuxer,
   |     ^^^^^^^

warning: unused import: `ffmpeg::convert_img_to_rgb`
  --> src/main.rs:21:5
   |
21 | use ffmpeg::convert_img_to_rgb;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Image`, `MACROBLOCKS_SIZE`, `Resolution`, and `YCbCrImage`
  --> src/main.rs:23:13
   |
23 | use image::{Image, Resolution, YCbCrImage, MACROBLOCKS_SIZE};
   |             ^^^^^  ^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `std::fs`
  --> src/main.rs:25:5
   |
25 | use std::fs;
   |     ^^^^^^^

warning: unused variable: `rgb`
  --> src/filters/grayscale.rs:24:33
   |
24 | ...                   let rgb = RGB::from(&pixel);
   |                           ^^^ help: if this is intentional, prefix it with an underscore: `_rgb`
   |
   = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0583`.
warning: `img` (bin "img") generated 7 warnings
error: could not compile `img` (bin "img") due to 1 previous error; 7 warnings emitted
